<resources>
    <string name="app_name">Companion</string>
    <string name="se_connecter">se connecter</string>
    <string name="companion">COMPANION</string>
    <string name="identifiant">identifiant</string>
    <string name="mot_de_passe">mot de passe</string>
    <string name="connectez_vous">Connectez-vous</string>
    <string name="suivant">suivant</string>
    <string name="connexion">connexion</string>
    <string name="c_est_parti">C\'est parti !</string>
    <string name="le_pseudonyme_indiqu_sera_celui_affich_dans_le_profil_et_est_modifiable_tout_moment">Le pseudonyme indiqué sera celui affiché dans le profil et est modifiable à tout moment</string>
    <string name="pseudonyme">Pseudonyme</string>
    <string name="entrez_vos_informations_ypareo_pour_acceder_companion">Entrez vos informations Ypareo pour acceder à Companion</string>
    <string name="finalisez_votre_profil">Finalisez votre profil</string>
    <string name="cr_ez_un_pseudonyme_et_ajoutez_un_photo_de_profil">Créez un pseudonyme et ajoutez un photo de profil</string>
    <string name="bonjour">Bonjour</string>
    <string name="nom_de_l_utilisateur">Nom de l\'utilisateur</string>
    <string name="consultez_les_r_sultats_du_devoir_de_math_matiques_du_mardi_10">Consultez les résultats du devoir de mathématiques du mardi 10</string>
    <string name="notifications">Notifications</string>
    <string name="conditions">Conditions Générales d\'Utilisation (CGU) de l’application Itic Companion Dernière mise à jour : Bienvenue sur Itic Companion, l\'application officielle de l’Université ITIC Paris, conçue pour offrir aux étudiants un accès simplifié à leur emploi du temps, leurs notes, les programmes scolaires, ainsi qu’un système de classement entre élèves avec carte de profil évolutive. En utilisant cette application, vous acceptez sans réserve les présentes Conditions Générales d’Utilisation (ci-après les ). Veuillez les lire attentivement. 1. Objet de l’application L’application Itic Companion est destinée exclusivement aux étudiants et membres autorisés de l’Université ITIC Paris. Elle permet notamment : La consultation de l’emploi du temps personnalisé ; L’accès aux notes et résultats scolaires ; L’affichage des programmes pédagogiques ; La participation à un système de classement entre étudiants basé sur des points attribués ; L’évolution d’un profil personnel incluant une carte virtuelle liée à la performance académique et à la position dans le classement. 2. Conditions d’accès L’application est accessible uniquement aux utilisateurs disposant d’un identifiant ITIC valide. Toute tentative d’accès non autorisé ou d’usurpation d\'identité pourra faire l’objet de sanctions disciplinaires et/ou judiciaires. 3. Données personnelles Conformément au Règlement Général sur la Protection des Données (RGPD), vos données personnelles (identité, résultats, participation, etc.) sont traitées de manière confidentielle et utilisées uniquement dans le cadre pédagogique et fonctionnel de l\'application. Vous pouvez à tout moment demander la rectification ou la suppression de vos données en contactant le service informatique de l’université : [email à insérer]. 4. Système de points et classement Le système de points est basé sur des critères académiques, d’assiduité ou de participation (ateliers, projets, etc.). Le classement est mis à jour automatiquement et visible par l’ensemble des utilisateurs de l’application. Ce système a un but ludique et pédagogique, sans conséquence sur la validation officielle des diplômes. Toute tentative de triche, manipulation ou contournement du système pourra entraîner des sanctions. 5. Carte de profil Chaque utilisateur dispose d’un profil évolutif qui reflète son engagement dans la vie universitaire. Ce profil contient : Un avatar et des badges évolutifs ; Le niveau de l’utilisateur selon les points cumulés ; Un historique simplifié des activités ou accomplissements. Ce système est uniquement illustratif et ne constitue pas un document académique officiel. 6. Propriété intellectuelle L’application, son contenu, sa structure et ses fonctionnalités sont la propriété exclusive de l’Université ITIC Paris. Toute reproduction, modification ou diffusion non autorisée est strictement interdite. 7. Responsabilités L’Université ITIC Paris met tout en œuvre pour assurer la disponibilité et la fiabilité de l’application, mais ne saurait être tenue responsable en cas de : Bugs, interruptions de service ou pertes de données ; Mauvaise utilisation ou détournement de l’application par les utilisateurs. 8. Modification des CGU Les présentes CGU peuvent être mises à jour à tout moment. En cas de modification, les utilisateurs seront informés via l’application et devront accepter les nouvelles conditions pour continuer à utiliser le service. 9. Contact Pour toute question relative à l’application ou aux présentes conditions, vous pouvez contacter le service numérique de l’Université ITIC Paris : 📧 [adresse e-mail à insérer] 📞 [numéro de téléphone à insérer] En accédant à l\'application Itic Companion, vous reconnaissez avoir lu et accepté l\'ensemble des présentes Conditions Générales d’Utilisation.</string>
    <string name="java_et_d_autres_trucs_cools">Java et d\'autres trucs cools</string>
    <string name="salle_10">Salle 10</string>
    <string name="classement_bts_sio_2">Classement BTS SIO 2</string>
    <string name="modifier_profil">modifier profil</string>
</resources>