<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  style="@style/Screen"
    android:padding="20dp"
    android:clipToPadding="false"
    tools:context=".MainActivity4">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/helvetica_bold"
                android:text="@string/bonjour"
                style="@style/text"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/helvetica_bold"
                android:text="Discipline en cours"
                style="@style/text"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_height="103dp"
                style="@style/card"
                android:layout_marginBottom="1dp"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:layout_width="match_parent">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="1dp"
                        android:fontFamily="@font/helveticat"
                        android:text="9h00"
                        style="@style/text2"/>
                    <TextView
                        android:id="@+id/nom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="1dp"
                        android:fontFamily="@font/helveticat"
                        android:text="Malek Chaouche"
                        style="@style/text2"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="54dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/helveticat"
                        android:text="Java et d'autres trucs cools aussi"
                        style="@style/text2"
                        android:textSize="15sp"/>


                    <androidx.cardview.widget.CardView
                        android:layout_width="8dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:backgroundTint="#4386DD"
                        app:cardCornerRadius="15dp"
                        tools:ignore="MissingConstraints">


                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:fontFamily="@font/helveticat"
                        android:text="Salle 10"
                        style="@style/text2"/>

                    <Button
                        android:id="@+id/button4"
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:background="@android:color/transparent"
                        android:textColor="@color/black" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/helvetica_bold"
                android:text="@string/classement_bts_sio_2"
                style="@style/text"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="169dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="15dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    style="@style/card2"
                    android:elevation="4dp"
                    app:cardUseCompatPadding="true"
                    >

                    <ImageView
                        android:id="@+id/avatarImage"
                        android:layout_width="match_parent"
                        android:layout_height="86dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="1dp"
                        android:background="@drawable/squarre_background"
                        android:clipToOutline="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/avatar_sample" />


                    <TextView
                        android:id="@+id/textContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/avatarImage"
                        android:layout_alignBottom="@+id/avatarImage"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="32dp"
                        android:layout_toStartOf="@+id/textView9"
                        android:layout_toEndOf="@+id/imageView2"
                        android:fontFamily="@font/helveticat"
                        android:text="@string/nom_de_l_utilisateur"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/avatarImage"
                        android:layout_alignEnd="@+id/avatarImage"
                        android:layout_alignBottom="@+id/avatarImage"
                        android:layout_marginTop="35dp"
                        android:layout_marginEnd="19dp"
                        android:layout_marginBottom="35dp"
                        android:text="29e"
                        android:textColor="@color/white" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:layout_alignStart="@+id/avatarImage"
                        android:layout_alignTop="@+id/avatarImage"
                        android:layout_alignBottom="@+id/avatarImage"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="10dp"
                        app:srcCompat="@drawable/circle_background" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="260dp"
                        android:layout_height="66dp"
                        android:layout_below="@+id/avatarImage"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="37dp"
                        android:layout_marginBottom="0dp"
                        android:fontFamily="@font/helvetica_bold"
                        android:shadowColor="@color/black"
                        android:text="Afficher la carte "
                     style="@style/bouton"
                        android:textSize="18dp" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/helvetica_bold"
                android:text="@string/notifications"
                style="@style/text"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardNotificationContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="#39307C"
                app:cardCornerRadius="15dp"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp"
                    style="@style/card2">

                    <!-- Première notification -->
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="16dp"
                        app:cardUseCompatPadding="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp">

                            <TextView
                                android:id="@+id/textNotificationTitle1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Notes du devoir du 10/02/26 disponibles !"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/textNotificationContent1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textNotificationTitle1"
                                android:layout_marginTop="8dp"
                                android:text="Consultez les résultats du devoir de mathématiques du mardi 10"
                                android:textColor="@color/black"/>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <!-- Deuxième notification -->
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="16dp"
                        app:cardUseCompatPadding="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp">

                            <TextView
                                android:id="@+id/textNotificationTitle2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Devoir prévu le 30/02/26"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:textStyle="bold"/>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="392dp"
        android:layout_height="74dp"
        android:layout_marginLeft="-20dp"
        android:layout_marginRight="-20dp"
        android:layout_marginBottom="-20dp"
        app:itemIconSize="25dp"
  style="@style/navigation"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>